# CrossIntersection

./: CMakeLists.txt  Car.cpp  Car.h  IntersectionManager.cpp  IntersectionManager.h  README.md  main.cpp
